--- a/tests/osgi-tests/pom.xml
+++ b/tests/osgi-tests/pom.xml
@@ -315,16 +315,21 @@
                         <artifactId>maven-antrun-plugin</artifactId>
                         <executions>
                             <execution>
-                                <phase>prepare-package</phase>
+                                <phase>post-integration-test</phase>
                                 <configuration>
                                     <target xmlns:jacoco="antlib:org.jacoco.ant">
                                         <taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml">
                                             <classpath path="${project.build.directory}" />
                                         </taskdef>
+                                        <!--Report merge is done so as to fix build when tests are skipped -->
+                                        <jacoco:merge
+                                                destfile="${project.build.directory}/coverage-reports/jacoco.exec">
+                                            <fileset dir="${project.build.directory}" includes="*.exec"/>
+                                        </jacoco:merge>
                                         <!-- OSGi Test coverage only enabled for org.wso2.carbon.stream.core module-->
                                         <jacoco:report>
                                             <executiondata>
-                                                <file file="${project.build.directory}/jacoco.exec" />
+                                                <file file="${project.build.directory}/coverage-reports/jacoco.exec" />
                                             </executiondata>
                                             <structure name="HTTP io OSGi Tests">
                                                 <classfiles>
@@ -334,7 +339,7 @@
                                                     <fileset dir="../../component/src" />
                                                 </sourcefiles>
                                             </structure>
-                                            <html destdir="${project.build.directory}" />
+                                            <html destdir="${project.build.directory}/coverage-reports" />
                                         </jacoco:report>
                                     </target>
                                 </configuration>
