--- a/pom.xml
+++ b/pom.xml
@@ -309,10 +309,10 @@
         </dependencies>
     </dependencyManagement>
     <properties>
-        <siddhi.mapper.json.version>4.0.4</siddhi.mapper.json.version>
-        <siddhi.mapper.text.version>1.0.4</siddhi.mapper.text.version>
-        <siddhi.mapper.xml.version>4.0.0</siddhi.mapper.xml.version>
-        <siddhi.version>4.0.0-M78</siddhi.version>
+        <siddhi.mapper.json.version>4.0.5</siddhi.mapper.json.version>
+        <siddhi.mapper.text.version>1.0.5</siddhi.mapper.text.version>
+        <siddhi.mapper.xml.version>4.0.2</siddhi.mapper.xml.version>
+        <siddhi.version>4.0.0-M107</siddhi.version>
         <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
         <commons.collections.version>3.1</commons.collections.version>
         <org.eclipse.osgi.services.version>3.5.100.v20160504-1419</org.eclipse.osgi.services.version>
@@ -466,7 +466,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
                     <configuration>
-                        <preparationGoals>clean install</preparationGoals>
+                        <preparationGoals>clean install -Pdocumentation-deploy</preparationGoals>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                     </configuration>
                 </plugin>
@@ -513,18 +513,6 @@
                         <forkMode>once</forkMode>
                         <argLine>-ea -Xmx512m</argLine>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.wso2.siddhi</groupId>
-                    <artifactId>siddhi-doc-gen</artifactId>
-                    <version>${siddhi.version}</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>generate-md-docs</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
