[WSO2-Release] [Release 1.0.4-SNAPSHOT] update documentation for release 1.0.4-SNAPSHOT

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,6 @@ google_analytics:
 pages:
 - Welcome to WSO2 Siddhi IO HTTP: index.md
 - API Docs:
-  - 1.0.3-SNAPSHOT: api/1.0.3-SNAPSHOT.md
+  - latest: api/latest.md
 - License: license.md
 theme: material
