--- a/pom.xml
+++ b/pom.xml
@@ -309,10 +309,10 @@
         </dependencies>
     </dependencyManagement>
     <properties>
-        <siddhi.mapper.json.version>4.0.8</siddhi.mapper.json.version>
-        <siddhi.mapper.text.version>1.0.6</siddhi.mapper.text.version>
-        <siddhi.mapper.xml.version>4.0.5</siddhi.mapper.xml.version>
-        <siddhi.version>4.0.0-M114</siddhi.version>
+        <siddhi.mapper.json.version>4.0.9</siddhi.mapper.json.version>
+        <siddhi.mapper.text.version>1.0.7</siddhi.mapper.text.version>
+        <siddhi.mapper.xml.version>4.0.6</siddhi.mapper.xml.version>
+        <siddhi.version>4.0.0-alpha</siddhi.version>
         <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
         <commons.collections.version>3.1</commons.collections.version>
         <org.eclipse.osgi.services.version>3.5.100.v20160504-1419</org.eclipse.osgi.services.version>
@@ -335,8 +335,8 @@
         <pax.exam.link.mvn.version>4.6.0</pax.exam.link.mvn.version>
         <pax.url.aether.version>1.6.0</pax.url.aether.version>
         <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
-        <carbon.kernel.version>5.2.0-alpha</carbon.kernel.version>
-        <carbon.transport.version>5.0.0-m1</carbon.transport.version>
+        <carbon.kernel.version>5.2.0</carbon.kernel.version>
+        <carbon.transport.version>5.0.1</carbon.transport.version>
         <commons-io.version>2.4.0.wso2v1</commons-io.version>
         <json.smart.version>2.1.0.wso2v1</json.smart.version>
         <carbon.touchpoint.version>1.1.0</carbon.touchpoint.version>
@@ -351,7 +351,7 @@
         <carbon.secvault.version.range>[5.0.0, 6.0.0)</carbon.secvault.version.range>
         <carbon.deployment.version>5.1.3</carbon.deployment.version>
         <carbon.deployment.version.range>[5.0.0,6.0.0)</carbon.deployment.version.range>
-        <org.wso2.carbon.messaging.version>3.0.0</org.wso2.carbon.messaging.version>
+        <org.wso2.carbon.messaging.version>3.0.1</org.wso2.carbon.messaging.version>
         <org.wso2.carbon.messaging.version.range>[3,4)</org.wso2.carbon.messaging.version.range>
         <!-- OSGi API version range-->
         <osgi.framework.package.import.version.range>[1.8.0, 2.0.0)</osgi.framework.package.import.version.range>
@@ -367,7 +367,7 @@
         <maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
         <maven.compiler.plugin.source.version>1.8</maven.compiler.plugin.source.version>
         <maven.compiler.plugin.target.version>1.8</maven.compiler.plugin.target.version>
-        <carbon.feature.plugin.version>3.1.0</carbon.feature.plugin.version>
+        <carbon.feature.plugin.version>3.1.3</carbon.feature.plugin.version>
         <maven.project.info.reports.plugin.version>2.4</maven.project.info.reports.plugin.version>
         <antlr4.maven.plugin.version>4.2.2</antlr4.maven.plugin.version>
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
