--- a/pom.xml
+++ b/pom.xml
@@ -366,19 +366,9 @@
                 <version>${org.ops4j.pax.tipi.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon</groupId>
-                <artifactId>org.wso2.carbon.launcher</artifactId>
-                <version>${carbon.kernel.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.osgi</groupId>
                 <artifactId>org.osgi.core</artifactId>
                 <version>${osgi.api.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>${javax.servlet.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.wso2.msf4j</groupId>
@@ -399,7 +389,7 @@
         <carbon.jndi.version>1.0.4</carbon.jndi.version>
         <carbon.datasources.version>1.1.3</carbon.datasources.version>
         <org.wso2.carbon.transport.http.netty.version>5.0.2</org.wso2.carbon.transport.http.netty.version>
-        <msf4j.version>2.5.0</msf4j.version>
+        <msf4j.version>2.5.0-beta</msf4j.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
         <siddhi.mapper.json.version>4.0.11</siddhi.mapper.json.version>
         <siddhi.mapper.text.version>1.0.9</siddhi.mapper.text.version>
@@ -429,7 +419,7 @@
         <pax.url.aether.version>1.6.0</pax.url.aether.version>
         <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
         <carbon.kernel.version>5.2.0</carbon.kernel.version>
-        <org.wso2.transport.http.version>6.0.51</org.wso2.transport.http.version>
+        <org.wso2.transport.http.version>6.0.56</org.wso2.transport.http.version>
         <org.wso2.transport.http.version.range>[6.0,7)</org.wso2.transport.http.version.range>
         <commons-io.version>2.4.0.wso2v1</commons-io.version>
         <json.smart.version>2.1.0.wso2v1</json.smart.version>
@@ -518,6 +508,19 @@
                 <version>${jacoco.maven.version}</version>
             </plugin>
             <plugin>
+                <groupId>org.wso2.siddhi</groupId>
+                <artifactId>siddhi-doc-gen</artifactId>
+                <version>${siddhi.version}</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>generate-md-docs</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
@@ -586,6 +589,11 @@
                         <forkMode>once</forkMode>
                         <argLine>-ea -Xmx512m</argLine>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco.plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
