--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,11 @@
                 <version>${msf4j.version}</version>
                 <type>zip</type>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.msf4j</groupId>
+                <artifactId>msf4j-core</artifactId>
+                <version>${msf4j.version}</version>
+            </dependency>
             <!-- https://mvnrepository.com/artifact/io.netty/netty-handler-proxy -->
             <dependency>
                 <groupId>org.wso2.carbon.transport</groupId>
@@ -388,7 +393,7 @@
     <properties>
         <carbon.jndi.version>1.0.4</carbon.jndi.version>
         <carbon.datasources.version>1.1.3</carbon.datasources.version>
-        <org.wso2.carbon.transport.http.netty.version>5.0.2</org.wso2.carbon.transport.http.netty.version>
+        <org.wso2.carbon.transport.http.netty.version>5.0.1</org.wso2.carbon.transport.http.netty.version>
         <msf4j.version>2.5.0-beta</msf4j.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
         <siddhi.mapper.json.version>4.0.11</siddhi.mapper.json.version>
