--- a/component/pom.xml
+++ b/component/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <artifactId>siddhi-io-http-parent</artifactId>
         <groupId>org.wso2.extension.siddhi.io.http</groupId>
-        <version>1.0.5-SNAPSHOT</version>
+        <version>1.0.9-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -159,13 +159,13 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <!--<argLine>${surefireArgLine} -ea -Xmx512m</argLine>-->
+                    <argLine>${surefireArgLine} -ea -Xmx512m</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.maven.version}</version>
+                <version>${org.jacoco.version}</version>
                 <executions>
                     <execution>
                         <id>jacoco-initialize</id>
