--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     </modules>
     <groupId>org.wso2.extension.siddhi.io.http</groupId>
     <artifactId>siddhi-io-http-parent</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.9-SNAPSHOT</version>
     <name>WSO2 Siddhi IO Extension - HTTP IO Aggregator Pom</name>
     <url>http://wso2.org</url>
     <profiles>
@@ -437,7 +437,7 @@
         <carbon.config.version>2.1.5</carbon.config.version>
         <carbon.config.package.import.version.range>[2.0.0, 3.0.0)</carbon.config.package.import.version.range>
         <carbon.secvault.version>5.0.8</carbon.secvault.version>
- 	<carbon.metrics.version>2.3.2</carbon.metrics.version>
+ 	    <carbon.metrics.version>2.3.2</carbon.metrics.version>
         <carbon.metrics.version.range>[2.0,3)</carbon.metrics.version.range>
         <carbon.secvault.version.range>[5.0.0, 6.0.0)</carbon.secvault.version.range>
         <carbon.deployment.version>5.1.5</carbon.deployment.version>
@@ -462,7 +462,7 @@
         <maven.project.info.reports.plugin.version>2.4</maven.project.info.reports.plugin.version>
         <antlr4.maven.plugin.version>4.2.2</antlr4.maven.plugin.version>
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
-        <jacoco.maven.version>0.7.9</jacoco.maven.version>
+        <org.jacoco.version>0.7.9</org.jacoco.version>
     </properties>
     <build>
         <extensions>
@@ -510,20 +510,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.maven.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.wso2.siddhi</groupId>
-                <artifactId>siddhi-doc-gen</artifactId>
-                <version>${siddhi.version}</version>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>generate-md-docs</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <version>${org.jacoco.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -584,7 +571,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20.1</version>
+                    <version>2.19.1</version>
                     <configuration>
                         <includes>
                             <include>**/*TestCase.java</include>
@@ -594,11 +581,6 @@
                         <forkMode>once</forkMode>
                         <argLine>-ea -Xmx512m</argLine>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>${jacoco.plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
