fix typo in site

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Siddhi-IO-HTTP
+site_name: Siddhi IO HTTP
 site_description: Siddhi IO HTTP Extension
 site_author: WSO2
 site_url: https://wso2-extensions.github.io/siddhi-io-http/
