--- a/pom.xml
+++ b/pom.xml
@@ -456,6 +456,7 @@
         <antlr4.maven.plugin.version>4.2.2</antlr4.maven.plugin.version>
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
         <org.jacoco.version>0.7.9</org.jacoco.version>
+        <surefire.plugin.version>2.22.1</surefire.plugin.version>
     </properties>
     <build>
         <extensions>
@@ -564,7 +565,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
+                    <version>${surefire.plugin.version}</version>
                     <configuration>
                         <includes>
                             <include>**/*TestCase.java</include>
