--- a/pom.xml
+++ b/pom.xml
@@ -381,6 +381,11 @@
                 <version>${org.wso2.carbon.transport.http.netty.version}</version>
                 <type>zip</type>
             </dependency>
+            <dependency>
+                <groupId>org.json.wso2</groupId>
+                <artifactId>json</artifactId>
+                <version>${org.json.wso2.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <properties>
@@ -388,6 +393,7 @@
         <carbon.datasources.version>1.1.3</carbon.datasources.version>
         <org.wso2.carbon.transport.http.netty.version>5.0.1</org.wso2.carbon.transport.http.netty.version>
         <msf4j.version>2.6.2</msf4j.version>
+        <org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
         <siddhi.mapper.json.version>4.0.31</siddhi.mapper.json.version>
         <siddhi.mapper.text.version>1.0.22</siddhi.mapper.text.version>
