--- a/pom.xml
+++ b/pom.xml
@@ -399,6 +399,7 @@
         <siddhi.mapper.text.version>1.0.22</siddhi.mapper.text.version>
         <siddhi.mapper.xml.version>4.0.18</siddhi.mapper.xml.version>
         <siddhi.version>4.4.8</siddhi.version>
+        <siddhi.version.range>[4.0.0,5.0.0)</siddhi.version.range>
         <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
         <carbon.analytics.common.version>6.0.66</carbon.analytics.common.version>
         <commons.collections.version>3.1</commons.collections.version>
